--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <script src="https://kit.fontawesome.com/29e915bfbc.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <title>Netflix - Watch TV Shows online, Watch Movies Online</title>
+  <script src="js/main.js" defer></script>
 </head>
 <body>
-  
+
 </body>
 </html>
