initial setup of netflix showcase section

--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://kit.fontawesome.com/29e915bfbc.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
-  <title>Netflix - Watch TV Shows online, Watch Movies Online</title>
+  <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
   <script src="js/main.js" defer></script>
 </head>
 <body>
-<h1>HELLLLOOOOOOO</h1>
+<header class="showcase">
+  <div class="showcase-top">
+    <img src="img/logo.png" alt="Netflix">
+    <a href="" class="btn btn-rounded">Sign In</a>
+  </div>
+  <div class="showcase-content">
+    <h1>Unlimited movies, TV shows, and more.</h1>
+    <p>Watch anywhere. Cancel anytime</p>
+    <a href="#" class="btn btn-xl">
+      Watch Free for 30 Days <i class="fas fa-chevron-right btn-icon"></i>
+    </a>
+    <p id="watch">Ready to watch? Enter your email to create or access your account.</p>
+  </div>
+</header>
 </body>
 </html>
