--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 </section>
 <section class="tab-content">
   <div class="container">
+
     <!-- Tab 1 Content -->
-    <!-- <div id="tab-1-content" class="tab-content-item show">
+    <div id="tab-1-content" class="tab-content-item show">
       <div class="tab-1-content-inner">
         <div>
           <p class="text-lg">
@@ -54,10 +55,10 @@
         </div>
         <img src="img/tab-content-1.png" alt="">
       </div>
-    </div> -->
+    </div>
 
     <!-- Tab 2 Content -->
-    <!-- <div id="tab-2-content" class="tab-2-content-item">
+    <div id="tab-2-content" class="tab-2-content-item">
       <div class="tab-2-content-top">
         <p class="text-lf">
           Watch TV shows and movies anytime, anywhere - personalized for you.
@@ -90,7 +91,7 @@
         </div>
       </div>
 
-    </div>   -->
+    </div>  
 
   <!-- Tab 3 Content -->
 
@@ -187,5 +188,7 @@
     </ul>
   </div>
 </footer>
+
+<script src="js/main.js"></script>
 </body>
 </html>
