make correction to naming error - change tab-2-content-item to tab-content-item -- line 61

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <!-- Tab 2 Content -->
-    <div id="tab-2-content" class="tab-2-content-item">
+    <div id="tab-2-content" class="tab-content-item">
       <div class="tab-2-content-top">
         <p class="text-lf">
           Watch TV shows and movies anytime, anywhere - personalized for you.
