--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
   <script src="js/main.js" defer></script>
 </head>
 <body>
-<header class="showcase">
-  <div class="showcase-top">
-    <img src="img/logo.png" alt="Netflix">
-    <a href="" class="btn btn-rounded">Sign In</a>
-  </div>
-  <div class="showcase-content">
-    <h1>Unlimited movies, TV shows, and more.</h1>
-    <p>Watch anywhere. Cancel anytime</p>
-    <a href="#" class="btn btn-xl">
-      Watch Free for 30 Days <i class="fas fa-chevron-right btn-icon"></i>
-    </a>
-    <p id="watch">Ready to watch? Enter your email to create or access your account.</p>
-  </div>
-</header>
+  <header class="showcase">
+    <div class="showcase-top">
+      <img src="https://i.ibb.co/r5krrdz/logo.png" alt="" />
+      <a href="#" class="btn btn-rounded">Sign In</a>
+    </div>
+    <div class="showcase-content">
+      <h1>See what's next</h1>
+      <p>Watch anywhere. Cancel Anytime</p>
+      <a href="#" class="btn btn-xl"
+        >Watch Free For 30 Days <i class="fas fa-chevron-right btn-icon"></i
+      ></a>
+    </div>
+  </header>
 <section class="tabs">
   <div class="container">
     <div id="tab-1" class="tab-item tab-border">
